--- a/WebFormFirst/accessWebApi.html
+++ b/WebFormFirst/accessWebApi.html
@@ -9,6 +9,8 @@
             var ulTest = $('#ultest');
 
             $('#btn').click(function () {
+                var username = $('#txtusername').val();
+                var password = $('#txtpassword').val();
                 $.ajax({
                     type: 'GET',
                     // Make sure to change the port number to
@@ -16,12 +18,20 @@
                     // running on your local machine
                     url: 'https://localhost:44334/api/test',
                     dataType: 'json',
+                    headers: {
+                        'Authorization':'Basic ' + btoa(username + ':' + password)
+                    },
                     success: function (data) {
                         ulTest.empty();
                         $.each(data, function (index, val) {
-                            var fulldata = val.name + ' ' + val.age;
+                            var fulldata = val.name + ' ' + val.age + ' ' + val.gender;
                             ulTest.append('<li>' + fulldata + '</li>')
                         });
+                    },
+                    complete: function (jqXHR) {
+                        if (jqXHR.status == '401')
+                            ulTest.empty();
+                            ulTest.append('<li>' +'unauthorized' + jqXHR.status+ '</li>')
                     }
                 });
             });
@@ -33,6 +43,9 @@
     </script>
 </head>
 <body>
+    username : <input type="text" id="txtusername"/>
+    password : <input type="password" id="txtpassword"/>
+    <br />
     <input id="btn" type="button" value="Get All Employees" />
     <input id="btnClear" type="button" value="Clear" />
     <ul id="ultest"></ul>
