--- a/EmpolyeeAuthServiceApi/Data.html
+++ b/EmpolyeeAuthServiceApi/Data.html
@@ -70,7 +70,7 @@
                 $('#divError').hide('fade');
             });
 
-            $('btnlogout').click(function () {
+            $('#btnlogout').click(function () {
                 sessionStorage.removeItem('accessToken');
                 window.location.href = "Login.html";
             });
