--- a/EmpolyeeAuthServiceApi/Data.html
+++ b/EmpolyeeAuthServiceApi/Data.html
@@ -10,9 +10,10 @@
         <div class="well">
             <input id="btnLoadEmployees" class="btn btn-success"
                    type="button" value="Load Employees" />
+            <input id="btnlogout" class="btn btn-success pull-right"
+                   type="button" value="Log out" />
         </div>
-        <input id="btnlogout" class="btn btn-success"
-               type="button" value="Log out" />
+       
         <div id="divData" class="well hidden">
             <table class="table table-bordered" id="tblData">
                 <thead>
