--- a/EmpolyeeAuthServiceApi/Login.html
+++ b/EmpolyeeAuthServiceApi/Login.html
@@ -78,6 +78,7 @@
                     success: function (response) {
                         sessionStorage.setItem("accessToken", response.access_token);
                         window.location.href = "Data.html";
+                        sessionStorage.setItem("username", response.username);
                     },
                     // Display errors if any in the Bootstrap alert <div>
                     error: function (jqXHR) {
